v<0.1.1>, <2014-07-10> -- Removed validation code since not fully developed.
v<0.1.0>, <2014-07-09> -- Initial package release.