@@ -48,9 +48,9 @@ copyright = u'2014, Alex Meadows, Coty Sutherland'
 # built documents.
 #
 # The short X.Y version.
-version = '0.1.1'
+version = '0.1.2'
 # The full version, including alpha/beta/rc tags.
-release = '0.1.1 - beta'
+release = '0.1.2 - beta'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
