@@ -15,6 +15,7 @@ Here is the sample MySQL database script used for the tutorial and for etlTest's
                     last_name VARCHAR(75) NOT NULL,
                     birthday DATE NOT NULL,
                     zipcode CHAR(5) NOT NULL,
+                    is_active TINYINT(1) NOT NULL DEFAULT 1,
                     PRIMARY KEY (user_id)
     );
 
