@@ -1,2 +1,2 @@
 __author__ = 'ameadows'
-__version__ = '0.1.1'
+__version__ = '0.1.2'
