@@ -4,21 +4,25 @@
   last_name:  Richards
   birthday:  2000-01-04
   zipcode:  55555
+  is_active: 0
 2:
   user_id: 2
   first_name:  Sarah
   last_name: Jenkins
   birthday:  2000-02-02
   zipcode:  12345
+  is_active: 1
 3:
   user_id: 3
   first_name:  Frank
   last_name: Williams
   birthday:  1972-03-03
   zipcode:  56789
+  is_active: 0
 4:
   user_id: 4
   first_name:
   last_name:  Thomas
   birthday:  1923-01-04
   zipcode: 44444
+  is_active: 1
