@@ -1,2 +1,3 @@
-v<0.1.1>, <2014-07-10> -- Removed validation code since not fully developed.
+v<0.1.2>, <2014-08-29> -- Added new test types to match base unittest assertions.  Added more to the tutorial and continued working on documentation.
+v<0.1.1>, <2014-08-22> -- Removed validation code since not fully developed.  Applied bugfixes to etlTest so that tests can be run from the tool.
 v<0.1.0>, <2014-07-09> -- Initial package release.
